# 30daysOS

./: .gitignore  Cargo.toml  Makefile  README.md  i686-haribote.json  ipl.nas  kernel.ld  note.md
.cargo/: config.toml
asm/: asmhead.nas
font_data/: process_hankaku.py
src/: allocator.rs  asm.rs  dsc_tbl.rs  fifo.rs  font.rs  gdt.rs  interrupts.rs  io_func.rs  lib.rs  main.rs  memory.rs  serial.rs  timer.rs  util.rs  vga.rs  vga_graphic.rs  vga_text.rs
src/allocator/: fixed_size_block.rs
src/dsc_tbl/: gdt.rs  idt.rs
src/font_data/: hankaku.txt  process_hankaku.py
src/vga_graphic/: colors256.rs  vga_palette.txt
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
