[package]
name = "haribote_os"
version = "0.1.0"
authors = ["woodyZootopia <piequalsabout314159@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "haribote_os"
crate-type = ["staticlib"]

[profile.dev]
opt-level = 2
lto = true
panic = "abort"

[profile.release]
opt-level = 2
lto = true
panic = "abort"
